Ensure the bots window has a scrollbar if needed

--- a/src/marvin/cli/tui.css
+++ b/src/marvin/cli/tui.css
@@ -263,7 +263,7 @@ BotInfo TextTable .label {
 #bots-info-container {
   layout: grid;
   grid-size: 3;
-  height: 90%;
+  overflow-y: scroll;
 }
 
 BotsList {
